# PHALS-CGBP

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CompactModel.cpp  CompactModel.h  Instance.cpp  Instance.h  README.md  Settings.h  flake.nix  graphik.ipynb  graphik_1.ipynb  main.cpp
compact/: CompactModel.cpp  CompactModel.h
convexification/: DualValues.h  DualVariables.h  Master.cpp  Master.h  Pricer.cpp  Pricer.h  ProductionLineSchedule.h  SubProblem.cpp  SubProblem.h  SubProblemInitialColumns.cpp  SubProblemInitialColumns.h
data/: Ins_12.cal  Ins_20-fixed.cal  Ins_20.cal  Ins_30.cal  Ins_4.cal  Ins_40.cal  Ins_50.cal  Ins_8.cal  Structure.phals
testing/: run_all_dw.sh  run_dw.sh
testing/results_timelimit_3000s/: AvgSolvingTime.csv  AvgTimes-reduced.ipynb  graphik.ipynb  graphik.py
testing/results_timelimit_3000s/pricing_iterations/: PR_Ins45_H_F.csv  PR_Ins4_E_A.csv  PR_Ins4_E_F.csv  PR_Ins4_H_A.csv  PR_Ins8_E_A.csv  PR_Ins8_E_F.csv  PR_Ins8_H_A.csv  PR_Ins8_H_F.csv  graphik_1.ipynb
